# CodingDNATransformers

./: .env  .gitignore  BERT_BASE.py  BERT_based.py  DNABERT_based.py  DNA_BERT.py  GPT_based.py  README.md  SpliceBERT.ipynb  SpliceBERT.py  SpliceGPT.py  SplicingTransformers.py  TransformersBase.py  all.py  bert.ipynb  dataset.ipynb  dataset_extraction.py  datasets_creation.py  docker-compose.yml  genbank_dataset_extraction.py  gencode_dataset_extraction.py  gencode_process_temp.py  gpt.py  gpt2.ipynb  gpt2_w_tok.ipynb  main - ExInSeqs.py  main.ipynb  main.py  main_ExInSeqs.ipynb  main_ExInSeqs.py  main_RebuildSeqs.ipynb  main_RebuildSeqs.py  pyproject.toml  requirements.txt  sequence_rebuild.ipynb
apps/backend/: .env.example  config.yaml  dockerfile  package-lock.json  package.json  tsconfig.json
apps/backend/prisma/: schema.prisma
apps/backend/src/: app.controller.ts  app.module.ts  main.ts
apps/data-worker/: dockerfile
apps/data-worker/src/: config.py  extractor.py  server.py
apps/frontend/: dockerfile  main.py
apps/frontend/core/: configurations.py
apps/frontend/pages/: training.py
apps/llm-api/: dockerfile  pyproject.toml
apps/llm-api/src/: config.py  lifespan.py  main.py  run_scripts.py
apps/llm-api/src/database/: db.py
apps/llm-api/src/dtos/: parent_dataset_dto.py
apps/llm-api/src/etl/: genbank.py  gencode.py
apps/llm-api/src/llms/protein_translator/: gpt.py
apps/llm-api/src/models/: child_dataset_model.py  child_record_model.py  eval_history_model.py  generation_batch_model.py  model_history_model.py  parent_dataset_model.py  parent_record_model.py  progress_tracker_model.py  train_history_model.py
apps/llm-api/src/repositories/: child_dataset_repo.py  child_record_repo.py  generation_batch_repo.py  parent_dataset_repo.py  parent_record_repo.py  progress_tracker_repo.py  raw_file_info_repo.py
apps/llm-api/src/routes/: parent_dataset_route.py  progress_tracker_route.py
apps/llm-api/src/schemas/: app_config_schema.py  datasets_schema.py  fine_tuning_schema.py
apps/llm-api/src/services/: dataset_service.py  decorators.py
apps/llm-worker/: .env.example  dockerfile  pyproject.toml
apps/llm-worker/src/: cli.py  initialize.py  interfaces.py  redis_service.py  server.py
apps/llm-worker/src/llms/: utils.py
apps/llm-worker/src/llms/exin_classifier/: gpt.py  prediction.ipynb
apps/llm-worker/src/llms/exin_translator/: gpt.py
apps/llm-worker/src/llms/protein_translator/: eval.py  gpt.py
apps/shared/protos/: data.proto  llm.proto
classes/: BERT_based.py  DNABERT_based.py  ExInSeqs_BERT.py  ExInSeqs_DNABERT.py  ExInSeqs_GPT.py  GPT_based.py  RebuildSeqs_GPT.py  SWExInSeqs_BERT.py  SplicingTransformers.py
configs/: config.json  datasets.json  supported_models.json
funcs/: config_reading.py  dataset_utils.py
interface/: app.py
need_adaptation/: configuration_route.py  creation.py
need_adaptation/funcs/: config_reading.py  dataset_utils.py
src/: data_extraction.ipynb  data_info.ipynb  data_processing.ipynb  final_translation.ipynb  main-dna.ipynb  main-exin-bert.ipynb  main-exin-dnabert.ipynb  main-exin-gpt.ipynb  main-exin.ipynb  main-nucl-bert.ipynb  main-nucl-dnabert.ipynb  main-nucl.ipynb  main-tran-gpt.ipynb  main-tran-llama.ipynb  main-tran-t5.ipynb  run_scripts.py  the_last_act.ipynb
src/app/backend/: main.py  scripts.py
src/app/interface/: main.py
src/app/utils/: paths.py
src/backend/: .env.example  app.py  config.py  config.yaml  db.py  main.py  scripts.py  utils.py
src/backend/api/: configuration.py  datasets.py
src/backend/configs/: config.json
src/backend/database/: db.py
src/backend/dtos/: progress_tracker_dto.py
src/backend/etl/: genbank.py  gencode.py  temp.py  utils.py
src/backend/funcs/: config_reading.py  dataset_utils.py
src/backend/handlers/: exception_handlers.py
src/backend/llms/: SplicingTransformers.py
src/backend/models/: base_model.py  child_dataset_model.py  child_record_model.py  datasets.py  datasets_model.py  eval_history_model.py  exin_classifier.py  exin_classifier_model.py  exin_translator.py  exin_translator_model.py  generation_batch_model.py  model_history.py  model_history_model.py  parent_dataset_model.py  parent_record_model.py  progress.py  progress_model.py  protein_translator.py  protein_translator_model.py  raw_file_info.py  raw_file_info_model.py  sliding_window_tagger.py  sliding_window_tagger_model.py  train_history.py  train_history_model.py
src/backend/repositories/: child_dataset_repo.py  child_record_repo.py  generation_batch_repo.py  parent_dataset_repo.py  parent_record_repo.py  progress_tracker_repo.py
src/backend/routes/: configuration_route.py  dataset_route.py  datasets_route.py  fine_tuning_route.py  parent_dataset_route.py  ping_route.py  progress_tracker_route.py
src/backend/schemas/: app_config_schema.py  base_response.py  datasets_schema.py  processed_datasets_schema.py
src/backend/services/: child_dataset_service.py  child_record_service.py  configuration_service.py  dataset_service.py  datasets_service.py  decorators.py  exin_classifier_service.py  fine_tuning_service.py  parent_dataset_service.py  parent_record_service.py  progress_tracker.py  progress_tracker_service.py  raw_file_info_service.py
src/backend/utils/: database_utils.py
src/configs/: config.json
src/data_processor/: raw_extractor.py
src/frontend/core/: training.py
src/frontend/pages/: configurations.py
src/funcs/: config_reading.py
src/llms/: base.py
src/llms/dna_translator/: gpt.py  llama.py  t5.py
src/llms/exin_classifier/: bert.py  dnabert.py  dnabert2.py  gpt.py
src/llms/nucl_classifier/: bert.py  dnabert.py  dnabert2.py
src/llms/triplet_classifier/: dnabert.py
src/pipelines/: ExInBERTPipeline.py  ExInDNABERTPipeline.py  ExInGPTPipeline.py  pipe_valid.ipynb
src/pipelines/datasets/: creation.py  genbank_dataset_extraction.py  (+1 more)
src/schemas/: tables_data.py  train_params.py
src/scripts/: main_ExInSeqs.py  main_RebuildSeqs.py  main_SWExInSeqs.py
src/utils/: blast_analysis.py  paths.py  set_base_models.py
(+52 files in other folders)
