[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Henrique",email = "ghfc2000@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "biopython (>=1.85,<2.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "gradio (>=5.24.0,<6.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "plyer (>=2.1.0,<3.0.0)",
    "transformers (>=4.51.1,<5.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "splicingsitestransformer"

[tool.poetry.scripts]
backend-dev = "src.scripts:backend_dev"
backend = "src.scripts:backend"
frontend-dev = "src.scripts:frontend_dev"
backend = "src.scripts:frontend"