[project]
name = "CodingDNATransformers"
version = "1.0.0"
description = "Transformers training and evaluation for the classification and generation of coding regions/proteins."
authors = [
    {name = "Gustavo Henrique Ferreira Cruz", email = "gustavohferreiracruz@gmail.com"},
]
dependencies = [
    "biopython>=1.85",
    "colorama>=0.4.6",
    "datasets>=3.6.0",
    "editdistance>=0.8.1",
    "hf-xet>=1.1.5",
    "huggingface-hub>=0.34.4",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "torchaudio>=2.7.1",
    "tqdm>=4.67.1>",
    "transformers>=4.53.0"
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python src/main.py"

[tool.pdm.resolution]
respect-source-order = true
 
[[tool.pdm.source]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
include_packages = ["torch", "torchvision", "torchaudio"]
verify_ssl = true

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"