[project]
name = "llm-api"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Gustavo Henrique", email = "ghfc2000@hotmail.com"},
]
dependencies = [
    "biopython>=1.85",
    "grpcio>=1.73.0",
    "grpcio-tools>=1.73.0",
    "pandas>=2.3.0",
    "datasets>=3.6.0",
    "transformers>=4.52.4",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
gen-proto = "python -m grpc_tools.protoc -I./src/servers/protos --python_out=./src/servers/generated --grpc_python_out=./src/servers/generated extraction.proto"
grpc = "python src/main.py"

[[tool.pdm.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
verify_ssl = true

[tool.pdm.dependencies]
torch = "*"
torchvision = "*"
torchaudio = "*"