[project]
name = "llm-worker"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Gustavo Henrique", email = "ghfc2000hotmail.com"},
]
dependencies = ["transformers>=4.53.0", "accelerate>=1.8.1", "grpcio>=1.73.1", "grpcio-tools>=1.73.1", "python-dotenv>=1.1.1", "redis>=6.2.0", "hf-xet>=1.1.5"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
initialize = "python src/initialize.py"
start = "python src/main.py"
